// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<link /> the class when hovered 1`] = `
<a
  className="DefaultLink"
  href="http://www.ithsdistans.se"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  iths distans
</a>
`;

exports[`<link /> the class when hovered 2`] = `
<a
  className="HoveredLink"
  href="http://www.ithsdistans.se"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  iths distans
</a>
`;

exports[`<link /> the class when hovered 3`] = `
<a
  className="DefaultLink"
  href="http://www.ithsdistans.se"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  iths distans
</a>
`;
